--- a/index.html
+++ b/index.html
@@ -28,17 +28,17 @@
     <div class="collapse navbar-collapse" id="navLinks">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a href="" class="nav-link">HOME</a>
+          <a href="#" class="nav-link">HOME</a>
         </li>
       </ul>
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a href="" class="nav-link">ABOUT</a>
+          <a href="#" class="nav-link">ABOUT</a>
         </li>
       </ul>
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a href="" class="nav-link">TICKETS</a>
+          <a href="#" class="nav-link">TICKETS</a>
         </li>
       </ul>
     </div>
