--- a/index.html
+++ b/index.html
@@ -2,18 +2,18 @@
 <html lang="en">
 
 <head>
-  <!-- Required meta tags -->
+  <!-- Potrebni meta tagovi -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <!-- Google Font -->
+  <!-- Font s Google  -->
   <link href="https://fonts.googleapis.com/css?family=Nunito:200,300,400,700" rel="stylesheet">
 
-  <!-- Bootstrap CSS -->
+  <!-- Bootstrap -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
     integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
-  <!-- Custom CSS -->
+  <!-- CSS -->
   <link rel="stylesheet" href="app.css">
 
   <title>Museum of Candy</title>
@@ -28,17 +28,13 @@
     <div class="collapse navbar-collapse" id="navLinks">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a href="#" class="nav-link">HOME</a>
+          <a href="#milk" class="nav-link">MILK</a>
         </li>
-      </ul>
-      <ul class="navbar-nav">
         <li class="nav-item">
-          <a href="#" class="nav-link">ABOUT</a>
+          <a href="#gumball" class="nav-link">GUMBALL</a>
         </li>
-      </ul>
-      <ul class="navbar-nav">
         <li class="nav-item">
-          <a href="#" class="nav-link">TICKETS</a>
+          <a href="#sprinkles" class="nav-link">SPRINKLES</a>
         </li>
       </ul>
     </div>
@@ -48,13 +44,13 @@
     <div class="row align-items-center">
       <div class="col-lg-6">
         <div id="headingGroup" class="text-white text-center d-none d-lg-block mt-5">
-          <h2 class="">MUSEUM<span>/</span>OF<span>/</span>CANDY</h2>
-          <h2 class="">MUSEUM<span>/</span>OF<span>/</span>CANDY</h2>
-          <h2 class="">MUSEUM<span>/</span>OF<span>/</span>CANDY</h2>
-          <h2 class="">MUSEUM<span>/</span>OF<span>/</span>CANDY</h2>
-          <h2 class="">MUSEUM<span>/</span>OF<span>/</span>CANDY</h2>
-          <h2 class="">MUSEUM<span>/</span>OF<span>/</span>CANDY</h2>
-          <h2 class="">MUSEUM<span>/</span>OF<span>/</span>CANDY</h2>
+          <h1 class="">MUSEUM<span>/</span>OF<span>/</span>CANDY</h1>
+          <h1 class="">MUSEUM<span>/</span>OF<span>/</span>CANDY</h1>
+          <h1 class="">MUSEUM<span>/</span>OF<span>/</span>CANDY</h1>
+          <h1 class="">MUSEUM<span>/</span>OF<span>/</span>CANDY</h1>
+          <h1 class="">MUSEUM<span>/</span>OF<span>/</span>CANDY</h1>
+          <h1 class="">MUSEUM<span>/</span>OF<span>/</span>CANDY</h1>
+          <h1 class="">MUSEUM<span>/</span>OF<span>/</span>CANDY</h1>
         </div>
       </div>
       <div class="col-lg-6">
@@ -62,18 +58,97 @@
       </div>
     </div>
   </section>
-  <!-- Optional JavaScript -->
-  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-    crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
-    integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-    crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
-    integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-    crossorigin="anonymous"></script>
+  <section id="milk">
+    <div class="container-fluid px-0">
+      <div class="row align-items-center content">
+        <div class="col-md-6 order-2 order-md-1">
+          <img src="images/milk.png" class="img-fluid" alt="">
+        </div>
+        <div class="col-md-6 text-center order-1 order-md-2">
+          <div class="row justify-content-center">
+            <div class="col-10 col-lg-8 edit mb-5 mb-md-0">
+              <h2>MILK</h2>
+              <img src="images/lolli_icon.png" alt="" class="display-none d-lg-inline">
+              <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, iste molestiae beatae,
+                maiores deserunt in voluptatibus aspernatur architecto excepturi delectus soluta? Ipsa, deleniti dolorem
+                hic consequatur repellat eveniet quidem voluptate necessitatibus dolorum delectus minus vitae, ut,
+                veritatis sint ipsum magnam autem nam ex deserunt debitis eaque ratione! Nobis, quidem assumenda.
+            </div>
+          </div>
+  </section>
+  <section id="gumball">
+    <div class="container-fluid px-0">
+      <div class="row align-items-center content">
+        <div class="col-md-6 order-1 order-md-2">
+          <img src="images/gumball.png" class="img-fluid" alt="">
+        </div>
+        <div class="col-md-6 text-center order-md-1">
+          <div class="row justify-content-center">
+            <div class="col-10 col-lg-8 edit mb-5 mb-md-0">
+              <h2>GUMBALL</h2>
+              <img src="images/lolli_icon.png" alt="" class="display-none d-lg-inline">
+              <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, iste molestiae beatae,
+                maiores deserunt in voluptatibus aspernatur architecto excepturi delectus soluta? Ipsa, deleniti dolorem
+                hic consequatur repellat eveniet quidem voluptate necessitatibus dolorum delectus minus vitae, ut,
+                veritatis sint ipsum magnam autem nam ex deserunt debitis eaque ratione! Nobis, quidem assumenda.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section>
+    <section id="sprinkles">
+      <div class="container-fluid px-0">
+        <div class="row align-items-center content">
+          <div class="col-md-6 order-2 order-md-1">
+            <img src="images/sprinkles.png" class="img-fluid" alt="">
+          </div>
+          <div class="col-md-6 text-center order-1 order-md-2">
+            <div class="row justify-content-center">
+              <div class="col-10 col-lg-8 edit mb-5 mb-md-0">
+                <h2>SPRINKLES</h2>
+                <img src="images/lolli_icon.png" alt="" class="display-none d-lg-inline">
+                <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, iste molestiae beatae,
+                  maiores deserunt in voluptatibus aspernatur architecto excepturi delectus soluta? Ipsa, deleniti
+                  dolorem hic consequatur repellat eveniet quidem voluptate necessitatibus dolorum delectus minus vitae,
+                  ut, veritatis sint ipsum magnam autem nam ex deserunt debitis eaque ratione! Nobis, quidem assumenda.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <footer>
+      <!-- Copyright -->
+      <div class="text-center pt-3 pb-1">
+        <p>© 2020 Copyright: MUSEUM OF CANDY</p>
+        <p>Powered by: <a class="text-decoration-none" href="https://github.com/MBesednik">Mateo Besednik</a></p>
+      </div>
+      <!-- Copyright -->
+    </footer>
 
+    <!-- jQuery prvo, pa Popper.js, pa Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+      crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+      integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+      crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+      integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+      crossorigin="anonymous"></script>
+
+    <script>
+      $(function () {
+        $(document).scroll(function () {
+          var $nav = $("#mainNavbar");
+          $nav.toggleClass("scrolled", $(this).scrollTop() > $nav.height());
+        });
+      });
+
+    </script>
 </body>
 
 </html>
